Thursday, December 13, 2001	Ron Steinke <rsteinke@w-link.net>

	* Added setVals() method to Matrix<>
	* Added operator>> for Vector<>, Matrix<>, Point<> to give
	  string read capability, added stream_funcs.cpp
	* Added toString() and fromString() for Vector<>, Matrix<>, Point<>,
	  changed operator<< to use toString(), removed operator>>

Wednesday, December 12, 2001	Ron Steinke <rsteinke@w-link.net>

	* Created atlas_funcs.cpp, wrote GetAtlasDoubleList() and
	  SetAtlasDoubleList() to handle most of the Atlas
	  interface work
	* Got a test for Atlas into configure.in
	* First CVS upload
`	* Copied the CoalCoord class in as Point<>, moved CoordType
	  and IsFloatEqual() into const.h, const.cpp
	* Added FloatAdd() and FloatSubtract() to handle numbers
	  whose sum/difference is (nearly) zero
	* Modified Vector<> and Matrix<> to use CoordType

Tuesday, December 11, 2001	Ron Steinke <rsteinke@w-link.net>

	* Got test functions working with RotMatrix<>
	* Created atlas_funcs.h to hold Atlas interface code,
	  wrote ToAtlas() and FromAtlas() for Vector<> and
	  Matrix<>

Monday, December 10, 2001	Ron Steinke <rsteinke@w-link.net>

	* After coversation with Rakshasa about how matrices are actually
	  being used in stage, replaced Matrix<> with RotMatrix<>


Friday, December 7, 2001	Ron Steinke <rsteinke@w-link.net>

	* Created some tests in matrix_test
	* Added GPL information to all the source files

Thursday, December 6, 2001	Ron Steinke <rsteinke@w-link.net>

	* Added more tests to vector_test
	* Implemented sloppyMag and associated functions
	  for Vector<2>, Vector<3>
	* Added a script, bc_sloppy_mag_3, to calculate some constants
	  for the Vector<3> implementation of sloppyMag
	* Got rid of RowVector<> and ColumnVector<> classes,
	  added rowSet() and columnSet() to Matrix<>

Wednesday, December 5, 2001	Ron Steinke <rsteinke@w-link.net>

	* First ChangeLog entry
	* Autoconf is working, and the Vector<> and Matrix<> class compile