@@ -1,6 +1,7 @@
 Makefile
-Mafefile.in
+Makefile.in
 config.cache
 config.log
+config.status
 configure
 libtool
