@@ -1,10 +1,7 @@
-Add license information to source files
-Finish Vector<> and Matrix<> classes
-Add a Point<> class
-Include orientation() operators for Vector<> once we have polar,
+Rearrange the functions in foo_funcs.h to match the order in the class
+	in foo.h
+Include orientation() functionss for Vector<>, RotMatrix<> once we have polar,
 	spherical points defined
-Stick Euler angle, orientation() stuff for Matrix<> into
-	a RotMatrix<> class, which is limited to rotation matrices?
 Add a Shape class, and child classes which include everything
 	in shape.h from libCoal, and axisalignedbox.h, math_volume.h,
 	and volume.h from stage/math
