@@ -5,4 +5,3 @@
 .libs
 Makefile
 Makefile.in
-atlas_test
